# elgeis-rolesync

./: .gitignore  Cargo.toml  LICENSE  README.org  run  rustfmt.toml
src/: config.rs  events.rs  main.rs  role.rs  user.rs
src/actions/: mod.rs  role.rs  user.rs
src/context/: config.rs  mod.rs
src/core/: user.rs
src/events/: mod.rs
