[package]
name = "elgeis-rolesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend"]
version = "0.11"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.21.2"
